# conflux-app

./: .gitignore  BUILD.md  CLAUDE.md  GITHUB_ACTIONS_UPDATE.md  MIHOMO_API.md  QUICK_REFERENCE.md  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SETUP_SUMMARY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  root.json  stop  sub-store.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: build-test.yml  ci.yml  release.yml  test-name.yml
.husky/: pre-commit  pre-push
docs/: MIHOMO_API.md  USER_GUIDE.md
homebrew/: README.md
homebrew/Casks/: conflux.rb
scripts/: build-service.ps1  dev-cleanup.ps1  fetch-geodata.sh  fetch-mihomo.sh  fetch-node.sh  fetch-substore.sh  gen-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: helper-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/examples/: render_tray_icon.rs
src-tauri/helper/: Cargo.toml
src-tauri/helper/src/: main.rs
src-tauri/icons/: .gitkeep  create_ico.mjs  create_ico.py  gen_win_icons.mjs  gen_win_icons.py  icon.icns  update_tray.mjs
src-tauri/resources/: .gitkeep  com.conflux.helper.plist  conflux-helper.sh
src-tauri/service/: Cargo.toml
src-tauri/service/src/: ipc.rs  main.rs  mihomo.rs  service.rs
src-tauri/src/: lib.rs  main.rs  tray_menu.rs
src-tauri/src/commands/: config.rs  logs.rs  mod.rs  profile.rs  proxy.rs  reload.rs  service.rs  substore.rs  system.rs  webdav.rs
src-tauri/src/config/: composer.rs  manager.rs  mod.rs  workspace.rs
src-tauri/src/mihomo/: api.rs  logs.rs  manager.rs  mod.rs
src-tauri/src/models/: config.rs  mod.rs  profile.rs  proxy.rs
src-tauri/src/substore/: manager.rs
src-tauri/src/system/: app_icon.rs  dns.rs  mod.rs  network_extension.rs  proxy.rs  tun.rs  win_service.rs
src-tauri/src/utils/: clipboard.rs  jsdelivr.rs  mod.rs  paths.rs  terminal_proxy.rs
src-tauri/src/webdav/: client.rs  mod.rs  sync.rs
src/components/connection/: ConnectionRow.tsx  ConnectionStats.tsx  KeywordFilter.tsx  ProcessIcon.tsx  SortSelect.tsx  TypeFilter.tsx  index.ts
src/components/icons/: NavIcons.tsx  RuleIcons.tsx  SiteIcons.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  WindowControls.tsx
src/components/ui/: RegionFlag.tsx  badge.tsx  bento-card.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx
src/hooks/: useToast.ts
src/pages/: Connections.tsx  ExternalResources.tsx  Home.tsx  Logs.tsx  Nodes.tsx  Overview.tsx  Providers.tsx  Proxy.tsx  ProxyGroups.tsx  ProxyServers.tsx  Requests.tsx  RuleDatabase.tsx  RuleEditWindow.tsx  Rules.tsx  Settings.tsx  SubStore.tsx  Subscription.tsx  SubscriptionEditWindow.tsx  Sync.tsx
src/pages/proxy-groups/: ProxyGroupEditWindow.tsx
src/pages/proxy-groups/hooks/: useProxyGroupForm.ts
src/pages/proxy-groups/shared/: ProxyGroupCard.tsx  ProxyGroupListItem.tsx  components.tsx  utils.ts
src/pages/proxy-groups/steps/: AdvancedStep.tsx  BehaviorStep.tsx  ProxiesStep.tsx  SourceStep.tsx  TypeStep.tsx  index.ts
src/pages/proxy-servers/: LinkParseDialog.tsx  ProxyServerDialog.tsx  ProxyServerEditWindow.tsx  constants.ts  index.tsx  types.ts  utils.ts
src/pages/proxy-servers/components/: BentoCard.tsx
src/pages/settings/: components.tsx
src/pages/settings/hooks/: index.ts  useCoreUpdateChecker.ts  usePortSettings.ts  useSettingsData.ts  useUpdateChecker.ts
src/pages/settings/sections/: DangerSection.tsx  DnsSection.tsx  GeneralSection.tsx  NetworkSection.tsx  WindowsServiceSection.tsx  index.ts
src/services/: ipc.ts
src/stores/: appStore.test.ts  appStore.ts  proxyStore.test.ts  proxyStore.ts
src/styles/: globals.css
src/tests/: setup.ts
src/types/: config.ts  network.ts  proxy-configs.ts  proxy.ts
src/utils/: cn.test.ts  cn.ts  connection.ts  deleteValidation.ts  dragUtils.ts  format.test.ts  format.ts  logger.ts
