[package]
name = "conflux"
version = "0.1.0"
description = "基于 Tauri 2 + MiHomo 的现代化代理管理桌面应用"
authors = ["Conflux Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "Conflux"

[[bin]]
name = "Conflux"
path = "src/main.rs"

[lib]
name = "conflux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
chrono = "0.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tauri-plugin-dialog = "2.0.0-rc.8"
resvg = "0.43"
tauri-plugin-fs = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
