[package]
name = "conflux"
version = "0.1.1"
description = "基于 Tauri 2 + MiHomo 的现代化代理管理桌面应用"
authors = ["Conflux Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "Conflux"

[[bin]]
name = "Conflux"
path = "src/main.rs"

[lib]
name = "conflux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
chrono = "0.4"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
tauri-plugin-dialog = "2.5"
resvg = "0.45"
tauri-plugin-fs = "2.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-autostart = "2.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
