[package]
name = "conflux"
version = "0.2.7"
description = "基于 Tauri 2 + MiHomo 的现代化代理管理桌面应用"
authors = ["Conflux Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "Conflux"

[[bin]]
name = "Conflux"
path = "src/main.rs"

[lib]
name = "conflux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
chrono = "0.4"
regex = "1"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
tauri-plugin-dialog = "2.5"
resvg = "0.45"
tauri-plugin-fs = "2.4"
zip = "0.6"
get_if_addrs = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-autostart = "2.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# 禁用过于严格的 pedantic lints
uninlined_format_args = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unnecessary_debug_formatting = "allow"
redundant_closure_for_method_calls = "allow"
unused_async = "allow"
must_use_candidate = "allow"
ignored_unit_patterns = "allow"
map_unwrap_or = "allow"
assigning_clones = "allow"
if_not_else = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
cast_possible_truncation = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
case_sensitive_file_extension_comparisons = "allow"
explicit_iter_loop = "allow"
manual_let_else = "allow"
iter_over_hash_type = "allow"
iter_kv_map = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
items_after_statements = "allow"
bind_instead_of_map = "allow"
unnecessary_lazy_evaluations = "allow"
default_trait_access = "allow"
match_same_arms = "allow"
redundant_pattern_matching = "allow"
unused_self = "allow"
cast_possible_wrap = "allow"
needless_return = "allow"
doc_link_with_quotes = "allow"
unnecessary_sort_by = "allow"
redundant_closure = "allow"
trivially_copy_pass_by_ref = "allow"
struct_field_names = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
checked_conversions = "allow"
single_match = "allow"
match_bool = "allow"
option_if_let_else = "allow"
field_reassign_with_default = "allow"
unchecked_duration_subtraction = "allow"
