[package]
name = "conflux-service"
version = "0.1.0"
edition = "2021"
description = "Conflux TUN Service - Runs mihomo with elevated privileges"
license = "GPL-3.0-only"

[[bin]]
name = "conflux-service"
path = "src/main.rs"

[dependencies]
# Windows service framework
windows-service = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server for IPC
warp = { version = "0.4", features = ["server"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Process management
sysinfo = "0.37"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",
]}

[profile.release]
opt-level = "z"
lto = true
strip = true




